5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1811_2564.log
== TEST (2019-06-09 17:58:26) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite o numero de gols efetuados por este time em cada partida:")))
vet2=array(eval(input("digite o numero de gols efetuados pelo time adverssario:")
cont=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(vet1[i]>vet2[i]):
		cont[0]=cont[0]+1
	if(vet1[i]<vet2[i]):
		cont[2]=cont[2]+1
	if(vet1[i]==vet2[i]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
File "XXXX", line 4
    cont=zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:59:00) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite o numero de gols efetuados por este time em cada partida:")))
vet2=array(eval(input("digite o numero de gols efetuados pelo time adverssario:")
cont=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(vet1[i]>vet2[i]):
		cont[0]=cont[0]+1
	if(vet1[i]<vet2[i]):
		cont[2]=cont[2]+1
	if(vet1[i]==vet2[i]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
File "XXXX", line 4
    cont=zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:59:08) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite o numero de gols efetuados por este time em cada partida:")))
vet2=array(eval(input("digite o numero de gols efetuados pelo time adverssario:")
cont=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(vet1[i]>vet2[i]):
		cont[0]=cont[0]+1
	if(vet1[i]<vet2[i]):
		cont[2]=cont[2]+1
	if(vet1[i]==vet2[i]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
File "XXXX", line 4
    cont=zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:59:26) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite o numero de gols efetuados por este time em cada partida:")))
vet2=array(eval(input("digite o numero de gols efetuados pelo time adverssario:")
cont=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(vet1[i]>vet2[i]):
		cont[0]=cont[0]+1
	if(vet1[i]<vet2[i]):
		cont[2]=cont[2]+1
	if(vet1[i]==vet2[i]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
File "XXXX", line 4
    cont=zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:59:55) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite o numero de gols efetuados por este time em cada partida:")))
vet2=array(eval(input("digite o numero de gols efetuados pelo time adverssario:")))
cont=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(vet1[i]>vet2[i]):
		cont[0]=cont[0]+1
	if(vet1[i]<vet2[i]):
		cont[2]=cont[2]+1
	if(vet1[i]==vet2[i]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:00:41) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite o numero de gols efetuados por este time em cada partida:")))
vet2=array(eval(input("digite o numero de gols efetuados pelo time adverssario:")))
cont=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(vet1[i]>vet2[i]):
		cont[0]=cont[0]+1
	if(vet1[i]<vet2[i]):
		cont[2]=cont[2]+1
	if(vet1[i]==vet2[i]):
		cont[1]=cont[1]+1
print(cont)
-- EXECUTION TIME:
1.04189
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
